# delphes

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Makefile  pyproject.toml
cards/: CMS_PhaseII_140PU_conf4.tcl  delphes_card_ALEPH.tcl  delphes_card_ATLAS.tcl  delphes_card_ATLAS_PileUp.tcl  delphes_card_CEPC.tcl  delphes_card_CLICdet_Stage1.tcl  delphes_card_CLICdet_Stage2.tcl  delphes_card_CLICdet_Stage3.tcl  delphes_card_CLICdet_Stage3_fcal.tcl  delphes_card_CMS.tcl  delphes_card_CMS_CSCCluster.tcl  delphes_card_CMS_NoFastJet.tcl  delphes_card_CMS_PileUp.tcl  delphes_card_CMS_blind.tcl  delphes_card_CircularEE.tcl  delphes_card_DELPHI.tcl  delphes_card_FCCeeDetWithSiTracking.tcl  delphes_card_FCCeh.tcl  delphes_card_HLLHC.tcl  delphes_card_IDEA.tcl  delphes_card_ILD.tcl  delphes_card_L3.tcl  delphes_card_LHCb.tcl  delphes_card_LHeC.tcl  delphes_card_MuonColliderDet.tcl  delphes_card_OPAL.tcl  trkCountingBTaggingCMS.tcl  validation_delphes_card_CLD.tcl
classes/: CMakeLists.txt  ClassesLinkDef.h  ClassesPythia8LinkDef.h  DelphesClasses.cc  DelphesClasses.h  DelphesHepMC2Reader.cc  DelphesHepMC2Reader.h  DelphesHepMC3Reader.cc  DelphesHepMC3Reader.h  DelphesLHEFReader.cc  DelphesLHEFReader.h  DelphesModule.cc  DelphesModule.h  DelphesPileUpReader.cc  DelphesPileUpReader.h  DelphesPileUpWriter.cc  DelphesPileUpWriter.h  DelphesPythia8Reader.cc  DelphesPythia8Reader.h  DelphesSTDHEPReader.cc  DelphesSTDHEPReader.h  DelphesStream.cc  DelphesXDRReader.cc  DelphesXDRReader.h  DelphesXDRWriter.cc  DelphesXDRWriter.h
converters/: hepmc2pileup.cpp  lhco2root.cpp  pileup2root.cpp  root2lhco.cpp  root2pileup.cpp  stdhep2pileup.cpp
delphes/: delphes.py  dict2tcl.py  tcl2dict.py
doc/: genMakefile.tcl
modules/: AngularSmearing.cc  AngularSmearing.h  BTagging.cc  BTagging.h  BeamSpotFilter.cc  BeamSpotFilter.h  BoostedTagging.cc  BoostedTagging.h  CMakeLists.txt  Calorimeter.cc  Calorimeter.h  Cloner.cc  Cloner.h  ClusterCounting.cc  ClusterCounting.h  ConstituentFilter.cc  ConstituentFilter.h  CscClusterEfficiency.cc  CscClusterEfficiency.h  CscClusterId.cc  CscClusterId.h  DecayFilter.cc  DecayFilter.h  Delphes.cc  Delphes.h  DenseTrackFilter.cc  DenseTrackFilter.h  DualReadoutCalorimeter.cc  DualReadoutCalorimeter.h  Efficiency.cc  Efficiency.h  EnergyScale.cc  EnergyScale.h  EnergySmearing.cc  EnergySmearing.h  ExampleModule.cc  ExampleModule.h  FastJetFinder.cc  FastJetFinder.h  FastJetGridMedianEstimator.cc  (+83 more)
readers/: Delphes.py  DelphesCMSFWLite.cpp  DelphesHepMC2.cpp  DelphesHepMC3.cpp  DelphesLHEF.cpp  DelphesProIO.cpp  DelphesProMC.cpp  DelphesProMC.py  DelphesPythia8.cpp  DelphesROOT.cpp  DelphesSTDHEP.cpp
tests/: conftest.py  test_angular_smearing.py  test_b_tagging.py  test_beam_spot_filter.py  test_calorimeter.py  test_cards.py  test_cloner.py  test_cluster_counting.py  test_constituent_filter.py  test_csc_cluster_efficiency.py  test_csc_cluster_id.py  test_decay_filter.py  test_dense_track_filter.py  test_dict2tcl.py  test_dual_readout_calorimeter.py  test_efficiency.py  test_energy_scale.py  test_energy_smearing.py  test_example_module.py  test_fast_jet_finder.py  test_fast_jet_grid_median_estimator.py  test_hector.py  test_identification_map.py  test_impact_parameter_smearing.py  test_isolation.py  test_jet_fake_particle.py  (+33 more)
(+42 files in other folders)
